<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Mech"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/mecanico"
        android:text="@string/mecanico"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FD000000"
        app:layout_constraintBottom_toTopOf="@+id/Pesq"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.655" />

    <TextView
        android:id="@+id/Emer"
        android:layout_width="245dp"
        android:layout_height="66dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/emerg_ncia"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="#0F0101"
        android:textColorHint="#FD090000"
        android:typeface="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnMec"
        android:layout_width="98dp"
        android:layout_height="54dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="324dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#0B0563"
        android:hint="@string/abrir"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnEme"
        android:layout_width="94dp"
        android:layout_height="53dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#F20404"
        android:hint="@string/abrir"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnPes"
        android:layout_width="111dp"
        android:layout_height="59dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="8dp"
        android:backgroundTint="#F2EE04"
        android:hint="@string/abrir"
        android:textColorHint="#020202"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Pesq"
        android:layout_width="242dp"
        android:layout_height="81dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="388dp"
        android:layout_marginEnd="8dp"
        android:text="@string/pesquisa"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="#000000"
        android:textColorHint="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/emerparen"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/emerparen"
        android:textColor="#070505"
        android:textColorHint="#0E0B0B"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/btnEme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Emer"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/mechparen"
        android:layout_width="256dp"
        android:layout_height="51dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/mechparen"
        android:textColorHint="#070707"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMec"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Mech"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>